SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Crew_Member__c/Crew_Member__c.object-meta.xml
<CustomObject>
    <label>Crew Member</label>
    <nameField>
        <label>Crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Member</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>