SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Crew_Member__c/fields/Crew_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Crew_Mobile_Number__c</fullName>
    <label>Crew Mobile Number</label>
    <type>Phone</type>
</CustomField>