SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Crew_Member__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>License Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>