SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Crew_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Co-Pilot</fullName>
            </value>
            <value>
                <fullName>Cabin Crew</fullName>
            </value>
            <value>
                <fullName>Ground Staff</fullName>
            </value>
            <value>
                <fullName>First Officer</fullName>
            </value>
            <value>
                <fullName>ATC</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>