SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Crew_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee_ID__c</columns>
    <columns>Flight__c</columns>
    <columns>NAME</columns>
    <columns>License_Number__c</columns>
    <columns>Experience_Years__c</columns>
    <columns>Crew_Email_Address__c</columns>
    <columns>Crew_Mobile_Number__c</columns>
    <columns>Assignment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>